--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,3 +18,8 @@ $fa-font-path:"../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 @import "~@fortawesome/fontawesome-free/scss/regular.scss";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
+
+//datatables
+@import "~datatables.net-dt/css/jquery.dataTables.css";
+@import "~datatables.net-buttons-bs4/css/buttons.bootstrap4.css";
+@import "~datatables.net-responsive-bs4/css/responsive.bootstrap4.css";
